Remove Eclipse Collections from config classes.