@@ -16,14 +16,13 @@
 
 package io.liftwizard.dropwizard.configuration.reladomo;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import javax.validation.constraints.NotNull;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import io.dropwizard.util.Duration;
-import org.eclipse.collections.impl.factory.Lists;
 
 public class ReladomoFactory
 {
@@ -32,7 +31,7 @@ public class ReladomoFactory
     // Something like 30 seconds to 2 minutes makes sense in production
     private          Duration     transactionTimeout                     = Duration.minutes(5);
     // reladomo-runtime-configuration/ReladomoRuntimeConfiguration.xml in production
-    private @NotNull List<String> runtimeConfigurationPaths              = Arrays.asList(
+    private @NotNull List<String> runtimeConfigurationPaths              = List.of(
             "reladomo-runtime-configuration/TestReladomoRuntimeConfiguration.xml");
     private          boolean      enableRetrieveCountMetrics             = true;
     private          boolean      captureTransactionLevelPerformanceData = true;
@@ -76,13 +75,13 @@ public class ReladomoFactory
     @JsonProperty
     public List<String> getRuntimeConfigurationPaths()
     {
-        return Lists.mutable.withAll(this.runtimeConfigurationPaths);
+        return this.runtimeConfigurationPaths;
     }
 
     @JsonProperty
     public void setRuntimeConfigurationPaths(List<String> runtimeConfigurationPaths)
     {
-        this.runtimeConfigurationPaths = runtimeConfigurationPaths;
+        this.runtimeConfigurationPaths = Collections.unmodifiableList(runtimeConfigurationPaths);
     }
 
     @JsonProperty
